--- a/units/unit2.lfm
+++ b/units/unit2.lfm
@@ -1,7 +1,7 @@
 object frmImage: TfrmImage
-  Left = 510
+  Left = 1188
   Height = 273
-  Top = 296
+  Top = 304
   Width = 534
   BorderIcons = [biSystemMenu]
   BorderStyle = bsDialog
@@ -15,13 +15,13 @@ object frmImage: TfrmImage
   object lblImgDesc: TLabeledEdit
     Left = 16
     Height = 33
-    Top = 57
+    Top = 56
     Width = 496
     EditLabel.Height = 25
     EditLabel.Width = 496
-    EditLabel.Caption = 'Image Description'
+    EditLabel.Caption = 'Description:'
     EditLabel.ParentColor = False
-    TabOrder = 0
+    TabOrder = 1
   end
   object lblImgUrl: TLabeledEdit
     Left = 16
@@ -30,25 +30,28 @@ object frmImage: TfrmImage
     Width = 496
     EditLabel.Height = 25
     EditLabel.Width = 496
-    EditLabel.Caption = 'Image URL'
+    EditLabel.Caption = 'Address:'
     EditLabel.ParentColor = False
-    TabOrder = 1
+    TabOrder = 2
     Text = 'http://'
   end
-  object cmdInsert: TSpeedButton
-    Left = 328
-    Height = 39
-    Top = 216
-    Width = 91
+  object cmdInsert: TButton
+    Left = 272
+    Height = 38
+    Top = 217
+    Width = 113
     Caption = 'Insert'
+    Default = True
     OnClick = cmdInsertClick
+    TabOrder = 0
   end
-  object cmdClose: TSpeedButton
-    Left = 427
-    Height = 39
-    Top = 216
-    Width = 91
+  object cmdClose: TButton
+    Left = 400
+    Height = 38
+    Top = 217
+    Width = 113
     Caption = 'Close'
     OnClick = cmdCloseClick
+    TabOrder = 3
   end
 end
