--- a/units/unit3.lfm
+++ b/units/unit3.lfm
@@ -1,7 +1,7 @@
 object frmHyeperLink: TfrmHyeperLink
-  Left = 1355
+  Left = 723
   Height = 273
-  Top = 181
+  Top = 449
   Width = 534
   BorderIcons = [biSystemMenu]
   BorderStyle = bsDialog
@@ -18,9 +18,9 @@ object frmHyeperLink: TfrmHyeperLink
     Width = 496
     EditLabel.Height = 25
     EditLabel.Width = 496
-    EditLabel.Caption = 'Enter Link Description'
+    EditLabel.Caption = 'Description:'
     EditLabel.ParentColor = False
-    TabOrder = 0
+    TabOrder = 1
   end
   object lblLinkUrl: TLabeledEdit
     Left = 16
@@ -29,25 +29,26 @@ object frmHyeperLink: TfrmHyeperLink
     Width = 496
     EditLabel.Height = 25
     EditLabel.Width = 496
-    EditLabel.Caption = 'Enter Hyperlink Address'
+    EditLabel.Caption = 'Address:'
     EditLabel.ParentColor = False
-    TabOrder = 1
+    TabOrder = 2
     Text = 'http://'
   end
   object cmdInsert: TButton
-    Left = 328
-    Height = 39
+    Left = 280
+    Height = 38
     Top = 216
-    Width = 91
+    Width = 113
     Caption = 'Insert'
+    Default = True
     OnClick = cmdInsertClick
-    TabOrder = 2
+    TabOrder = 0
   end
   object cmdClose: TButton
-    Left = 427
-    Height = 39
+    Left = 399
+    Height = 38
     Top = 216
-    Width = 91
+    Width = 113
     Caption = 'Close'
     OnClick = cmdCloseClick
     TabOrder = 3
